# diabetes-predictor-ml-flask

./: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  README  app.py  pyproject.toml  requirements.txt
.Trash-0/info/: Untitled.ipynb.trashinfo
data/processed/: FC212039_Healthcare-Diabetes-Preprocessed-test.csv  FC212039_Healthcare-Diabetes-Preprocessed-train.csv  FC212039_Healthcare-Diabetes-Preprocessed.csv
data/processed/FC110595_thathsara/: Healthcare-Diabetes.csv
data/raw/FC110595_thathsara/: Clean.py
models/: knn_best_model.pkl  scaler_minmax.pkl
models/FC110595_thathsara/: diabetes_xgb_model.pkl
models/FC212002_Janith/: decisiontree_model.pkl
models/FC212029_Venumi/: random_forest_model.pkl
models/FC212039_Thusharangi/: logistic_regression_model.pkl
notebooks/FC110595_thathsara/: XGBoot.ipynb  requirements.txt
notebooks/FC212002_Janith/: descisiontree.ipynb
notebooks/FC212015_SHIMAS/: Healthcare-Diabetes.csv  SVM.ipynb  Untitled.ipynb
notebooks/FC212026_Malsha/: knn.ipynb
notebooks/FC212029_Venumi/: RandomForest.ipynb
notebooks/FC212039_Thusharangi/: FC212039_LogisticRegression.ipynb
src/: __init__.py
src/FC212002_Janith/: model_test.ipynb  model_train.ipynb  model_validate.ipynb
src/FC212002_Janith/splits/: X_test_dataset.csv  X_train_dataset.csv  X_validation_dataset.csv  y_test_dataset.csv  y_train_dataset.csv  y_validation_dataset.csv
src/routes/: ui.py
src/static/css/: style.css
src/static/js/: predict.js
src/templates/: bmi.html  dpf.html  index.html  predict.html
src/utils/: preprocess.py
(+2 files in other folders)
