[project]
name = "diabetes-predictor-ml-flask"
version = "0.1.0"
description = "A Diabetes Prediction System Using Machine Learning and Flask Web"
authors = [
    {name = "W M Venumi V Alagoda", email = "venumivonara@gmail.com"}
]
requires-python = "Framework, focuses on developing an intelligent web-based application to predict the"
